z-index fix

--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -6,13 +6,14 @@ main {
   color: white;
   flex-direction: column;
   position: relative;
+  z-index: 1;
 }
 .user__photo {
   padding-bottom: 15px;
 }
 
 .main__user {
-  z-index: 10;
+  z-index: -1;
   padding-top: 70px;
   display: flex;
   flex-direction: column;
@@ -29,7 +30,6 @@ main {
     p {
       margin-left: 6px;
       --animate-duration: 1.5s;
-     
     }
   }
 }
@@ -127,7 +127,7 @@ button {
 }
 
 .main__bg {
-  z-index: 0;
+  z-index: -2;
   position: absolute;
   height: 100%;
   width: 100%;
